--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,5 +3,5 @@
 <div class="center jumbotron">
 <h1>Welcome to Friendly</h1>
 <h2>Connect with friends</h2>
-<%= link_to "Sign Up Now!", '#', class: "btn btn-lg btn-primary" %>
+<%= link_to "Sign Up Now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div> 
