--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,27 @@
 <% provide(:title, 'Sign up') %>
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>Sign up</h1>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+     <%= form_with(model: @user, local: true) do |f| %>
+     <%= render 'shared/error_messages' %>
+
+     <%= f.label :fist_name %>
+     <%= f.text_field :first_name, class: 'form_control' %>
+
+     <%= f.label :last_name %>
+     <%= f.text_field :last_name, class: 'form_control' %>
+
+     <%= f.label :email %>
+     <%= f.email_field :email %>
+
+     <%= f.label :password %>
+     <%= f.password_field :password, class: 'form_control' %>
+
+     <%= f.label :password_confirmation, "Confirmation" %>
+     <%= f.password_field :password_confirmation, class: 'form_control' %>
+
+     <%= f.submit "Create my account", class: "btn btn-primary" %>
+     <% end %>
+
+     </div>
+     </div>
