--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,19 @@
 <% provide(:title, "Home") %>
 
+<% if logged_in? %>
+<div class="row">
+<aside class="col-md-4">
+<section class="user_info">
+<%= render 'shared/user_info' %>
+</section>
+</aside>
+</div>
+<% else %>
+
 <div class="center jumbotron">
 <h1>Welcome to Friendly</h1>
 <h2>Connect with friends</h2>
 <%= link_to "Sign Up Now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div> 
+
+<% end %>
