--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -3,5 +3,5 @@
 <div class="field">
 <%= f.text_area :content, placeholder: "Create a new post..." %>
 </div>
-<%= f.submit "Post" class: "btn btn-primary" %>
+<%= f.submit "Post", class: "btn btn-primary" %>
 <% end %>
