--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,14 @@
 <section class="user_info">
 <%= render 'shared/user_info' %>
 </section>
+<section class="micropost_form">
+<%= render 'shared/micropost_form' %>
+</section>
 </aside>
+<div class="col-md-8">
+<h3>Your Feed</h3>
+<%= render 'shared/feed' %>
+</div>
 </div>
 <% else %>
 
