--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -4,7 +4,7 @@
 <section class="user_info">
 <%= gravatar_for @user %>
 <h1> <%= @user.first_name %> </h1>
-<span> <%= <%= link_to "view my profile", @user %> </span>
+<span> <%= link_to "view my profile", @user %> </span>
 <span><b>Posts:</b> <%= @user.microposts.count %> </span>
 </section>
 <section class="stats">
